# Labcompnua

./: README.md
Practica1/: CMakeLists.txt
Practica1/ejecutables/: practica0
Practica1/include/: Mesh.h  Shader.h  Window.h
Practica1/src/: E01-318520489.cpp  P01-318520489.cpp  Shader.cpp  mainbase.cpp  segundo_main (copia).cpp
Practica2/: CMakeLists.txt
Practica2/include/: Mesh.h  Shader.h  Window.h
Practica2/shaders/: verde_oscuro_shader.vert
Practica2/shaders/SHADERSMODIFICADOS/: verde_shader.vert
Practica2/src/: E02-318520489.cpp  P02-318520489.cpp  Shader.cpp  practica2 .cpp
Practica3/: CMakeLists.txt
Practica3/include/: Camera.h  Mesh.h  Shader.h  Window.h  definition.h
Practica3/shaders/: shader.vert
Practica3/src/: E03-318520489.cpp  practica3.cpp
Practica4/: CMakeLists.txt
Practica4/include/: Camera.h  Mesh.h  Shader.h  Window.h  definition.h
Practica4/src/: E04-318520489.cpp  P04-318520489.cpp  Shader.cpp  Window.cpp
Practica5/: CMakeLists.txt
Practica5/Models/: goddardbase_tuto_roque.mtl  jeepcofre.mtl  (+2 more)
Practica6/: CMakeLists.txt  COFREFI.blend  COFREFI.blend1  dado_animales_NAA.xcf  dado_naa.blend  dado_naa.blend1  llanta.blend  llanta.blend1
Practica7/: carro.blend  carro.blendpr.blend  carro.blendpr.blend1  lamp.blend1  sanctum.blend  sanctum.blend1  sanctum2.xcf  sanctum3.xcf
Practica8/: CMakeLists.txt  carro.blend1  carro.blend11  dad010caras.tga  dad010caras.xcf  gema.blend  gema.blend1  gema.blend11  lamp.blend  sanctum.blend  sanctum.blend1  sanctum.xcf  sanctum4.xcf  uploads_files_2582719_SpaceStone (1).blend
(+57 files in other folders)
